--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseFiles.cshtml
@@ -36,11 +36,15 @@
                             @*temporary file downloaded only by action, not directly*@
                             @if (Model.VirtualDirectory && !file.IsTemporary)
                             {
-                                <a target="_blank" onclick="window.dhHelpdesk.logFileAccess(@Model.ObjectId, '@file.FileName', @((int) CaseFileType.CaseFile))"
-                                   href="@Html.Action("CaseFileLinkVD", "FileHandler",
-                                             new RouteValueDictionary {{"id", Model.ObjectId}, {"fileName", file.FileName}})">
-                                    <i class="icon-file"></i>@file.FileName
+                               <a target="_blank" onclick="window.dhHelpdesk.logFileAccess(@Model.ObjectId, '@file.FileName', @((int) CaseFileType.CaseFile))"
+                                   href="@Url.Action("Documents", "Cases",new RouteValueDictionary {{"id", Model.ObjectId}, {"fileName", file.FileName}})">
+                                    <i class="icon-file"></i>@file.FileName<br />
                                 </a>
+                                @*<a target="_blank" onclick="window.dhHelpdesk.logFileAccess(@Model.ObjectId, '@file.FileName', @((int) CaseFileType.CaseFile))"
+               href="@Html.Action("CaseFileLinkVD", "FileHandler",
+                         new RouteValueDictionary {{"id", Model.ObjectId}, {"fileName", file.FileName}})">
+                <i class="icon-file"></i>@file.FileName
+            </a>*@
                             }
                             else
                             {
