--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseFiles.cshtml
@@ -37,7 +37,7 @@
                             @if (Model.VirtualDirectory && !file.IsTemporary)
                             {
                                <a target="_blank" onclick="window.dhHelpdesk.logFileAccess(@Model.ObjectId, '@file.FileName', @((int) CaseFileType.CaseFile))"
-                                   href="@Url.Action("Documents", "Cases",new RouteValueDictionary {{"id", Model.ObjectId}, {"fileName", file.FileName}})">
+                                   href="@Url.Action("Documents", "Cases",new RouteValueDictionary {{"id", Model.ObjectId}, {"fileName", file.FileName}, { "type", 0 } })">
                                     <i class="icon-file"></i>@file.FileName<br />
                                 </a>
                                 @*<a target="_blank" onclick="window.dhHelpdesk.logFileAccess(@Model.ObjectId, '@file.FileName', @((int) CaseFileType.CaseFile))"
