--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Documents.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Documents.cshtml
@@ -2,14 +2,26 @@
 @{
     ViewBag.Title = "Documents";
 }
-
+<style>
+    .col {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .responsive {
+        max-width: 100%;
+        height: auto;
+    }
+</style>
 @if (ViewBag.IsImage)
 {
-    <img src="~/@ViewBag.Path" />
+    <div class="col"><img src="~/@ViewBag.Path" class="responsive"/></div>
 }
 else
 {
-    <object width="1200" height="800" data="~/@ViewBag.Path"></object>
+    <object width="100%" height="100%" data="~/@ViewBag.Path"></object>
 }
 
 
