--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogFiles.cshtml
@@ -65,8 +65,7 @@
                                     @*<a target="_blank" class="@(GuidHelper.IsGuid(Model.LogId) ? "isExisted" : "")"
                                     onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @((int)CaseFileType.CaseFile))"
                                     href="@BuildCaseFileLinkVD(fileModel.Name)"><i class="icon- attachedFile"></i>@fileModel.Name</a>*@
-                                    <a target="_blank" onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @((int) CaseFileType.CaseFile))"
-                                       href="@Url.Action("Documents", "Cases",new RouteValueDictionary {{"id", Model.CaseId}, {"fileName", fileModel.Name}, { "type", 0 } })">
+                                    <a target="_blank" href="@Url.Action("Documents", "Cases",new RouteValueDictionary {{"id", Model.CaseId}, {"fileName", fileModel.Name}, { "type", 0 } })">
                                         <i class="icon-file"></i>@fileModel.Name<br />
                                     </a>
                                 }
@@ -95,9 +94,7 @@
                                         @*<a target="_blank" class="@(GuidHelper.IsGuid(Model.LogId) ? "isExisted" : "")"
                                            onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @(fileModel.LogType == LogFileType.Internal ? (int)CaseFileType.LogInternal : (int)CaseFileType.LogExternal), @fileModel.ObjId.Value)"
                                            href="@BuildLogFileLinkVD(fileModel.ObjId.Value, fileModel.Name, fileModel.ParentLogType ?? fileModel.LogType)"><i class="icon- attachedFile"></i> @fileModel.Name</a>*@
-                                        <a target="_blank"
-                                           onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @(fileModel.LogType == LogFileType.Internal ? (int)CaseFileType.LogInternal : (int)CaseFileType.LogExternal), @Model.LogId)"
-                                           href="@Url.Action("Documents", "Cases",new RouteValueDictionary { { "id", Model.CaseId }, { "fileName", fileModel.Name }, { "type", type } , {"logId", Model.LogId } })"
+                                        <a target="_blank" href="@Url.Action("Documents", "Cases",new RouteValueDictionary { { "id", Model.CaseId }, { "fileName", fileModel.Name }, { "type", type } , {"logId", Model.LogId } })"
                                            data-toggle="tooltip" rel="tooltip" data-placement="top" title="@(GetLogTypeText(fileModel.LogType))">
                                             <i class="@(GetFileIcon(fileModel.LogType))"></i> @fileModel.Name
                                         </a>
